# c-data-structures

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.gradle
docs/: linkedlist.txt
gradle/wrapper/: gradle-wrapper.properties
include/: linkedlist.h
include/CDS/: linkedlist.h
src/: CMakeLists.txt  linkedlist.c
src/cds/c/: cds_linkedlist.c  cdslinkedlist.c  comparator.c  linkedlist.c
src/cds/headers/: cds_linkedlist.h  cdslinkedlist.h  linkedlist.h
src/cds/headers/CDS/: comparator.h  linkedlist.h
src/cdsTest/c/: comparator_suite.c  linked_list_suite.c  suite_operators.c  test_create_linked_list.c
src/cdsTest/headers/: tests.h
test/: linkedlist_test.c  test.c
tests/: comparator_suite.c  linked_list_suite.c
